feat: update Dockerfile and docker-compose for secure proxy configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
 services:
   secure-proxy:
+    image: "tnfssc/secure-proxy:latest"
     build:
       context: .
       dockerfile: Dockerfile
       tags:
         - "tnfssc/secure-proxy:latest"
+    env_file:
+      - .env
     # ports:
     #   - "3000:3000"
 
